fixed bug where whitespace was clickable and class was not being removed from keys

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,11 +114,36 @@ button {
   justify-content: center;
 }
 
+@keyframes bounce {
+  0% {
+    transform: scale(.8);
+  }
+  25% {
+    transform: scale(1);
+  }
+  50% {
+    transform: sclae(1.1);
+  }
+  60% {
+    transform: scale(1.2);
+  }
+  70% {
+    transform: scale(1.1);
+  }
+  80% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 .chosen {
   background: var(--color-neutral);
   border-radius: 5px;
   font-size: var(--font-size-medium);
   color: #FFFFFF;
+  animation: bounce 1s forwards;
 }
 
 .btn__reset {
